# agentic_content_creator

./: .gitignore  README.md  blog.md  blog_outline.md  content_plan.md  content_research.md  final_social_media_content.md  marketanalysis.md  poem.txt  pyproject.toml  research.md  social_media_content.md  trained_agents_data.pkl  training_data.pkl
output/: AI_and_Machine_Learning.txt  LLM_test_time_trainging.md  LLM_test_time_trainging_None.md  Timeline_of_AGI.md  linkedin_post_facts_and_rumors_about_gemini_2.0_flash_architecture_1.md  linkedin_post_facts_and_rumors_about_gemini_2.0_flash_architecture_2.md  linkedin_post_facts_and_rumors_about_gemini_2.0_flash_architecture_3.md  linkedin_post_facts_and_rumors_about_gemini_2.0_flash_architecture_4.md  linkedin_post_facts_and_rumors_about_gemini_2.0_flash_architecture_5.md  linkedin_post_gemini_2.0_flash_1.md  linkedin_post_gemini_2.0_flash_10.md  linkedin_post_gemini_2.0_flash_2.md  linkedin_post_gemini_2.0_flash_3.md  linkedin_post_gemini_2.0_flash_4.md  linkedin_post_gemini_2.0_flash_5.md  linkedin_post_gemini_2.0_flash_6.md  linkedin_post_gemini_2.0_flash_7.md  linkedin_post_gemini_2.0_flash_8.md  linkedin_post_gemini_2.0_flash_9.md  linkedin_post_google's_new_quantum_chip_willow_1.md  linkedin_post_google's_new_quantum_chip_willow_10.md  linkedin_post_google's_new_quantum_chip_willow_2.md  linkedin_post_google's_new_quantum_chip_willow_3.md  linkedin_post_google's_new_quantum_chip_willow_4.md  linkedin_post_google's_new_quantum_chip_willow_5.md  linkedin_post_google's_new_quantum_chip_willow_6.md  (+36 more)
(+12 files in other folders)
